Fix resizing on firefox

--- a/js/src/inspector.less
+++ b/js/src/inspector.less
@@ -1,3 +1,6 @@
+body {
+    margin: 0;
+}
 #ixv {
 /*
     #ixv-loading-mask {
@@ -27,15 +30,18 @@
         height: 100%;
         box-sizing: border-box; 
         position: relative;
+        z-index: 0;
+        padding-right: 5px;
 
         & > iframe {
             width: 100%;
             height: 100%;
+            box-sizing: border-box;
         }
 
         .zoom-in, .zoom-out {
             position: absolute;
-            right: 20px;
+            right: 30px;
             width: 20px;
             height: 20px;
             border: solid 1px #bbb;
@@ -57,6 +63,24 @@
 
         .zoom-out {
             top: 40px;
+        }
+
+        .resize {
+            position: absolute;
+            top: 0;
+            width: 5px;
+            right: 0;
+            bottom: 0;
+            z-index: 20;
+        }
+        /* This spacer stops drag events getting lost to the iframe */
+        .resize-spacer {
+            position: absolute;
+            top: 0;
+            width: 3px;
+            right: 5px;
+            bottom: 0;
+            z-index: 20;
         }
 
         
